[tool.poetry]
name = "raven-dashboard-api"
version = "0.1.0"
description = ""
authors = ["Elizabeth Shivers <Elizabeth.Shivers@gtri.gatech.edu>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.scripts]
start = ""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.100.0"
pydantic = "2.0.2"
uvicorn = "0.22.0"
pydantic-settings = "2.0.1"
requests = "2.31.0"
hypercorn = "0.14.4"
SQLAlchemy = "2.0.19"
psycopg2-binary = "2.9.6"
PyJWT = "2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
